less/nav.less
@import (reference) "styles.less";

.menuToggler {
  position: fixed;
  top: 10px;
  left: 10px;
  height: 42px;
  width: 42px;
  background: red;
  color: @white1;
  border-radius: 50%;
  font-size: 25px;
  font-weight: 900;
  z-index: 3;
  padding: 10px;
  text-align:center;
}

.swNavBar {
  position: relative;
  z-index: 4;
  background: @base-color;
  width: 100%;
  @media(min-width: @screen-sm-min){
    text-align: right;
    height: 45px;
    overflow: hidden;
  }
  @media(max-width: @screen-xs-max){
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
  }
  .actionWrapper{
    @media(max-width: @screen-xs-max) {
     display: inline;
      width: 18.66666667%;
      padding-left: 5px;
      padding-right: 5px;
    }

    @media(min-width: @screen-sm-min){
        display: inline-block;
      }
  }
  .actionButton{
      @media(max-width: @screen-xs-max){
        //background: @white1;
        //color: @base-color;
        height: 42px;
        width: 42px;
        border-radius: 50%;
        font-size: 27px;
        font-weight: 900;
        div{
          font-size: 0;
          &:first-letter {
            text-transform: uppercase;
            display: block;
            font-size: 27px;
            font-weight: 900;
          }
        }
      }
    }



  .linkItems {
    color: @white1;
    background: @base-dark;
    @media(min-width: @screen-sm-min) {
      padding: 10px;
      font-size: 18px;
      i{
      padding: 0;
      margin: 0;
    }
    }
    &:hover {
      background: @secondary-color;
    }
  }
}

.logoWrapper {
  @media(max-width: @screen-xs-max) {
    display: inline;
  }
  @media(min-width: @screen-sm-min) {
    float: left;
  }
  .swLogo {
    font-family: @lato;
    font-weight: 900;
    @media(max-width: @screen-xs-max) {
      background: @white1;
      color: @base-color;
      &:hover {
        background: @secondary-color;
      }
    }
    @media(min-width: @screen-sm-min) {
      color: @white1;
      float: left;
      font-size: 22px;
      padding-top: 5px;
      padding-bottom: 5px;
      &:hover {
        color: @secondary-color;
      }
    }
  }
}



.swMenu {
  @media(min-width: @screen-sm-min){
    float: right;
  }
}



.playerToggle {
  font-family: @fa;
  &.loading {
    content: '\f110';
  }
  &.active {
    content: '\f102';
  }
  &.inactive {
    content: '\f144';
  }
}

.subscriptionMenuToggle {
  font-size: 14px;
}

.episodeBySubscriptionBrowser {
  display: none;
  .allEpisodes a {
    background: @base-color;
    color: @white1;
    text-shadow: @standard-shadow;
    display: block;
  }
  .swItem {
    float:left;
    position: relative;
    overflow: hidden;

    @media(max-width: @screen-xs-max) {
      font-size: 10px;
      ///padding: 10px ;
      width: 33%;
      //padding: 1%;
      //height: 100px;
    }
    @media(min-width: @screen-sm-min) {
      font-size: 16px;
      //padding: 10px ;
      width: 16.667%;
    }

    .swImg {
      width: 100%;
      display: block;
      position: relative;
      z-index: 1;

    }
    .swTitle {
      @media(max-width: @screen-xs-max) {
        padding: 5px;
      }
      @media(min-width: @screen-sm-min) {
        padding: 10px ;
      }

      padding: 0 5px;
      height: 40px;
      width: 100%;
      position: absolute;
      z-index: 2;
      bottom: 0;
      color: @white1;
      text-shadow: @standard-shadow;
      &::after{
        z-index: 1;
        content: '';
        background: #000;
        opacity: 0.7;
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
      }
      span {
        position: relative;
        z-index: 2;
      }
    }
  }

}

